--- a/style.css
+++ b/style.css
@@ -6,16 +6,26 @@ body {
     background-color: #00BFFF;
 }
 button {
-    display: flex;
-    flex-direction: column;
+     background-color: #007bff;
+  color: white;
+  padding: 10px 100px;
+  border: 2px solid rgb(253, 255, 250);
+  border-radius: 1000px;
+  font-size: 20px;
+  cursor: pointer;
 }
 button:hover {
-  background: red;
+  background: #ffc107;
 }
-.sceneimg {
-  background-size: cover;
-  background-position: center;
-  min-height: 400px;
-  padding: 20px;
-  color: white; /* if background is dark */
+img {
+  width: 100%;
+  height: auto;
+  max-height: 70vh;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+#options {
+    display: flex;
+  justify-content: space-around;
 }
